부산대 BE_이시웅 3단계 - 데이터베이스 적용 (#222)
* chore: dto 폴더로 분류

* docs: 디비 마이그레이션 해야할 것들 추가

* feat: jdbcTemplate 연결 및 목업 데이터 15개 추가를 jdbc update 메서드로 변경

* docs: 요구사항 세분화

* feat[jdbc]: 게시글 전체/단건 조회
-  지피티를 지양하고 최대한 공식문서와 블로그를 참고하며 구현해보았다.
- query(쿼리, rowmapper)로 전체조회 <- preparedStatement 아님
- queryForObject(쿼리, rowmapper, {변수})로 단건 조회 <- preparedStatement!

* docs: 검증로직 todo에 추가

* feat[jdbc]: 생성 기능 구현
- 기존 createItem 서비스 함수는 generated pk를 리턴
- jdbc에서 이를 리턴하기위해 다음 2가지를 수행
1. preparedStatement 객체에 RETURN_GENERATED_KEYS 명시
2. 키 값을 받아올 keyHolder를 명시
(꽤 번거로운 작업인 것 같다. jpa는 save함수 리턴을 이용하면 매우 쉬웠는데)

* feat[jdbc]: 수정/삭제기능 구현
- 단순히 jdbctemplate.update는 preparedStatement와 ?인자에 들어갈 값들을 넣어주면 된다.
- jdbctemplate는 쿼리 스트링을 만들고 실행시키는데에는 편리하나 뭐랄까 쿼리 실행이후 무언가를 리턴하는 작업을 하기엔 좀 번거로운 면이 있다.

* build: validation 종속성 설치

* feat: ItemRequestDto에 입력값 검증 추가

* feat: ItemRequestDto에 입력값 검증 추가

* remove: db 초기화 및 목업데이터 삽입 코드 삭제

* refactor: db 초기화 및 목업 데이터 삽입 로직 변경
- 해결하려는 문제를 왜? 어떻게로 분석하는 습관을 가져보는 차원에서
왜?: 기존 서비스레이어에서 디비를 초기화하는건 일단 자체부터가 부자연스럽고 SRP도 위배
어떻게?: ddl과 초기화 로직을 각각 schema/data.sql에 명시하고 resources에 저장해두기 -> 스프링이 알아서 실행시켜줌

* remove: item entity에서 auto increment 수작업 기능 삭제

* feat: dto 상품명 검증로직 세분화
- 카카오 <- 이건 다음 step에서 구현할 예정

* feat: Item 객체를 사용하는 것으로 변경
- 기존 서비스 레이어에서 쿼리 조립시 reqDto를 직접 사용
- Item 객체를 req으로부터 조립해 만들기로
- 이를 위해 Item 자체에도 pk 유무에 따른 생성자를 하나 더 만들었음
(추후 레포지토리에 Item을 넣을 예정)

* feat: 레포지토리 인터페이스 작성

* feat: 레포지토리 구현체 작성 및 서비스 레이어와의 분리
- 단건조회를 Optional로 해 NPE 대처 및 존재확인 로직으로 사용

* feat: 서비스 메서드에 트랜잭션 설정

* test: 테스트 코드 작성